Feature Adicionada integração entre as páginas
Foi realizada a integração entre as páginas index.html, microcredito.html e signin.html

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
               <p class="card-text">A análise de crédito é um procedimento de verificação ou checagem de dados utilizado para avaliar se o tomador de recursos (seja pessoa física ou jurídica) possui ou não a capacidade de cumprir com o pagamento da quantia a que solicita empréstimo. Esta análise visa proteger as instituições financeiras que fornecerão o crédito de uma possível inadimplência, assim como também calcular o risco envolvido no processo.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><a href="microcredito.html">Ver</a></button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Matricula</button>
+                  <a href="microcredito.html" class="btn btn-secondary my-2">Ver</a>
+                  <a href="signin.html" class="btn btn-primary my-2">Matricula</a>
                 </div>
                 <small class="text-muted">9 aulas</small>
               </div>
