--- a/signin.html
+++ b/signin.html
@@ -10,9 +10,6 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/sign-in/">
 
-    
-
-    
 
 <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -95,6 +92,7 @@
       </label>
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Entrar</button>
+    <a href="cadastro.html" class="btn btn-secondary my-2">Novo cadastro</a>
     <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
   </form>
 </main>
