Feature Criada a página de dashboard do usuário

--- a/signin.html
+++ b/signin.html
@@ -91,8 +91,8 @@
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Entrar</button>
-    <a href="cadastro.html" class="btn btn-secondary my-2">Novo cadastro</a>
+    <button class="w-100 btn btn-lg btn-secondary" type="submit"><a href="dashboard.html">Entrar</a></button>
+    <a href="cadastro.html" class="btn btn-primary my-2">Novo cadastro</a>
     <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
   </form>
 </main>
